<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:showAsAction="always"
        android:title="@string/undo" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:showAsAction="always"
        android:title="@string/save" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:showAsAction="ifRoom"
        android:title="@string/redo"
        android:visible="false" />
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_new"
        android:showAsAction="ifRoom"
        android:title="@string/new_document"
        android:visible="false" />
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_open"
        android:showAsAction="ifRoom"
        android:title="@string/open_short"
        android:visible="false" />

    <item
        android:id="@+id/menu_file"
        android:showAsAction="never"
        android:title="@string/menu_file">
        <menu>
            <item android:id="@+id/file_new" android:title="@string/new_document"
                android:alphabeticShortcut="n" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/file_open" android:title="@string/open"
                android:alphabeticShortcut="o" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/file_recent" android:title="@string/recent">
                <menu />
            </item>
            <item android:id="@+id/file_save" android:title="@string/save"
                android:alphabeticShortcut="s" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/file_save_as" android:title="@string/save_as"
                android:alphabeticShortcut="s" android:alphabeticModifiers="CTRL|SHIFT" />
            <item android:id="@+id/file_reopen" android:title="@string/reopen_with_encoding">
                <menu>
                    <item android:id="@+id/reopen_utf8" android:title="UTF-8" />
                    <item android:id="@+id/reopen_utf8_bom" android:title="UTF-8 with BOM" />
                    <item android:id="@+id/reopen_utf16le" android:title="UTF-16 LE" />
                    <item android:id="@+id/reopen_utf16be" android:title="UTF-16 BE" />
                    <item android:id="@+id/reopen_ansi" android:title="ANSI" />
                </menu>
            </item>
            <item android:id="@+id/file_default_folder" android:title="@string/default_folder" />
            <item android:id="@+id/file_exit" android:title="@string/exit" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_edit"
        android:showAsAction="never"
        android:title="@string/menu_edit">
        <menu>
            <item android:id="@+id/edit_undo" android:title="@string/undo"
                android:alphabeticShortcut="z" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/edit_redo" android:title="@string/redo"
                android:alphabeticShortcut="y" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/edit_cut" android:title="@string/cut"
                android:alphabeticShortcut="x" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/edit_copy" android:title="@string/copy"
                android:alphabeticShortcut="c" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/edit_paste" android:title="@string/paste"
                android:alphabeticShortcut="v" android:alphabeticModifiers="CTRL" />
            <item android:id="@+id/edit_delete" android:title="@string/delete" />
            <item android:id="@+id/edit_select_all" android:title="@string/select_all"
                android:alphabeticShortcut="a" android:alphabeticModifiers="CTRL" />
        </menu>
    </item>
</menu>
